# faster-raspiraw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hd0.32k  measure.sh  process.sh  run.sh  tstamps.csv
include/: imx219_modes.h  operations.h  raspberrypi-firmware.h  raspiraw.h
src/: RaspiCLI.c  RegOperation.c  operations.c  raspiraw.c  rpi3-gpiovirtbuf.c.back
tools/: 1280x720  1296x704_S  1296x720_s  1640x1232  1640x922  1920x1080  2592x1944_s  320x240  3280x2464  640x128  640x128_s  640x240  640x240_B  640x240_B_s  640x240_s  640x32  640x400_s  640x416_s  640x480  640x480_44  640x480_s  640x64  640x64_s
